# aicontest.dev

./: .gitignore  Cargo.toml  Readme.md
agent/: Cargo.toml
agent/src/: cartesian.rs  connection.rs  main.rs  past_scores.rs  precompute.rs  strategy.rs
common/: Cargo.toml
common/src/: consts.rs  game_state.rs  lib.rs  player_move.rs  point.rs
