[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bufstream = "0.1.4"
clap = { version = "4.2", features = ["derive"] }
env_logger = "0.10"
game-common = { path = "../common" }
log = "0.4.17"
rayon = "1.7.0"
